--- a/14_login/templates/login.html
+++ b/14_login/templates/login.html
@@ -1,20 +1,18 @@
 <!DOCTYPE html>
 <html>
-  <title> {{}} </title>
-  <h2>
-    {{Heading}}
-  </h2>
-  <body>
-    <table>
-      <tr>
-	<th> {{ col1 }} </th>
-	<th> {{ col2 }} </th>
-      </tr>
-      {% for x in y %}
-      <tr>
-        <td> {{ x }} </td>
-      </tr>
-      {% endfor %}
-    </table>
-  </body>
+  <head>
+  <title>Login!</title>
+</head>
+<body><br><center><form action="/auth" method="POST">
+  Username: <input type="text" name="username"><br>
+  Password: <input type="password" name="password"><br>
+  <button type ="submit">Login</button>
+</form>
+{% if session["error"] == 1 %}
+<p style="color: red">Username incorrect.</p>
+{% elif session["error"]== 2 %}
+<p style="color: red">Password incorrect.</p>
+{% endif %}
+</center>
+</body>
 </html>
