--- a/15_flashinh/templates/login.html
+++ b/15_flashinh/templates/login.html
@@ -1,18 +1,14 @@
-<!DOCTYPE html>
-<html>
-  <head>
-  <title>Login!</title>
-</head>
-<body><br><center><form action="/auth" method="POST">
+{% extends "template.html" %}
+{% set msgs = get_flashed_messages() %}
+{% block title %}Login!{% endblock %}
+{% block body %}
+{% set msgs = get_flashed_messages() %}
+<br><center><form action="/auth" method="POST">
   Username: <input type="text" name="username"><br>
   Password: <input type="password" name="password"><br>
   <button type ="submit">Login</button>
 </form>
-{% if session["error"] == 1 %}
-<p style="color: red">Username incorrect.</p>
-{% elif session["error"]== 2 %}
-<p style="color: red">Password incorrect.</p>
-{% endif %}
-</center>
-</body>
-</html>
+{% for msg in msgs %}
+<p style="color: red">{{ msg }}</p>
+{% endfor %}
+</center>{% endblock %}
