--- a/15_flashinh/templates/welcome.html
+++ b/15_flashinh/templates/welcome.html
@@ -1,9 +1,6 @@
-<!DOCTYPE html>
-<html>
-<head>
-	<title>Logged In</title>
-</head>
-<body>
+{% extends "template.html" %}
+{% block title %}Logged In{% endblock %}
+{% block body %}
 	<p>Your username is {{ session["uname"] }}.</p>
 	<a type="button" href={{ url_for('logout') }}>Logout</a>
-</body></html>
+{% endblock %}
