Make a small change

--- a/25_rest/templates/index.html
+++ b/25_rest/templates/index.html
@@ -17,5 +17,6 @@
       {% endif %}
     {% endfor %}
   {% endfor %}
+  <h3>These were generated based on starting coordinates (my house) and ending coordinates (Stuyvesant).</h3>
 </body>
 </html>
